@@ -1,5 +1,6 @@
 package backend.car_rental.config;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Value;
@@ -32,8 +33,8 @@ public class SecurityConfig {
 
     private final IUserRepository userRepository;
 
-    @Value("${ALLOWED_ORIGIN}")
-    private String allowedOrigin;
+    @Value("${ALLOWED_ORIGINS}")
+    private String allowedOrigins;
 
     @Bean
     public JwtAuthenticationFilter jwtAuthenticationFilter(IJwtService jwtService, IUserRepository userRepository) {
@@ -63,15 +64,15 @@ public class SecurityConfig {
     }
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() { // <--
+    public CorsConfigurationSource corsConfigurationSource() { 
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of(allowedOrigin)); // <--
+        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(","))); 
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH"));
         config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(true); // <--
+        config.setAllowCredentials(true); 
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config); // <--
+        source.registerCorsConfiguration("/**", config); 
         return source;
     }
 
